# niedziugadu

./: CMakeLists.txt  README.md  main.cpp
Client/: CMakeLists.txt
Client/include/: client.hpp  client_commands.hpp  client_communication.hpp  client_menu.hpp  client_session.hpp
Client/include/HAL/: HAL_UI.hpp  HAL_memory.hpp
Client/src/: client.cpp  client_commands.cpp  client_communication.cpp  client_menu.cpp  client_session.cpp
Client/src/HAL/: HAL_UI.cpp  HAL_memory.cpp
Server/: CMakeLists.txt
Server/include/: server.hpp  server_commands.hpp  server_communication.hpp  server_logger.hpp  server_memory.hpp  server_session.hpp  server_user.hpp  server_user_session.hpp
Server/src/: server.cpp  server_commands.cpp  server_communication.cpp  server_session.cpp  server_user.cpp  server_user_session.cpp
include/: defines.hpp  message.hpp
src/: message.cpp
